src/objects/IT_Incident_Update__c.object
<CustomObject>
    <fields>
        <fullName>Date_time_of_update__c</fullName>
        <defaultValue>now()</defaultValue>
        <label>Date &amp; time of update</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Has_the_incident_been_resolved__c</fullName>
        <label>Has the incident been resolved?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IT_Incident__c</fullName>
        <label>IT Incident</label>
        <referenceTo>IT_Incident__c</referenceTo>
        <relationshipLabel>IT Incident Updates</relationshipLabel>
        <relationshipName>IT_Incident_Updates</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Update_information__c</fullName>
        <label>Update information</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <label>IT Incident Update</label>
    <nameField>
        <displayFormat>ITIU{0000}</displayFormat>
        <label>IT Incident Update Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IT Incident Updates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>